--- a/Calculator ~ GUI/Form3.resx
+++ b/Calculator ~ GUI/Form3.resx
@@ -117,4 +117,29 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAAAAMQOAADEDgAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAbllU/25ZVP9uWVT/bVhUhQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAABuWVT/ovKt/6Lyrf+i8q3/ovKt/6Lyrf+FnXv/aVpaEQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAABuWVT/ovKt/6Lyrf+i8q3/ovKt/6Lyrf+i8q3/ovKt/5zho/8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAABxVVUJovKt/6Lyrf+i8q3/ovKt/6Lyrf+i8q3/ovKt/6Lyrf+i8q3/bllU/wAA
+        AAAAAAAAAAAAAAAAAAAAAAAAbllU/6Lyrf+i8q3/ovKt/6Lyrf+i8q3/ovKt/6Lyrf+i8q3/ovKt/6Ly
+        rf8AAAAAAAAAAAAAAAAAAAAAAAAAAG5ZVP+i8q3/ovKt/6Lyrf97gGv/eXpn/3l6Z/+i8q3/ovKt/6Ly
+        rf+i8q3/AAAAAAAAAAAAAAAAAAAAAAAAAABuWVT/ovKt/6Lyrf9f8///ovKt/6Lyrf+i8q3/l/K6/3jz
+        4P+i8q3/ovKt/wAAAACoxWH/l6Vd/wAAAAAAAAAAbllT3KLyrf+i8q3/ovKt/6Lyrf+i8q3/ovKt/6Ly
+        rf+i8q3/ovKt/5fSm/8AAAAAfXVX/3FeVf8AAAAAAAAAAAAAAACa3KD/ovKt/3FjWv+i8q3/ovKt/6Ly
+        rf+i8q3/m92h/6Lyrf9uWVT/AAAAAG5ZVJtuWlRYAAAAAAAAAAAAAAAAblhTaKLyrf+i8q3/ovKt/6Ly
+        rf+i8q3/ovKt/6Lyrf9vXVf/AAAAAAAAAACoxWH/pcBg/wAAAAAAAAAAAAAAAAAAAABwV1cpdGpe/6Ly
+        rf+i8q3/ovKt/5/qqP9uWVT/AAAAAAAAAAAAAAAAqMVh/6jFYf9uWVT/AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAbVpVNm1JSQcAAAAAAAAAAAAAAAAAAAAAAAAAAJOeXP+oxWH/qMVh/25ZVP8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAApL1g/6W/YP8AAAAAbllT2ajFYf+Yp13/AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKjFYf+oxWH/bllU/25ZVP+oxWH/hoZZ/wAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABuWVT/qMVh/6jFYf+oxWH/qMVh/21Z
+        U+IAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAG5ZVP6Cflj/e3FX/21Z
+        VNQAAAAA8f8AAMB/AACAPwAAgB8AAAAfAAAAHwAAABMAAIATAACAHwAAwDMAAOBxAAD/8AAA/8wAAP/A
+        AAD/wQAA//MAAA==
+</value>
+  </data>
 </root>
